# fastapi-postgresql-starter

./: .env.template  .flake8  .gitignore  Dockerfile  README.md  alembic.ini  compose.yml  docker-compose.yml  itermocil-config.yml  mypy.ini  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 1708979263_create_app_user_table.py  1708979263_create_auth_user_table.py  1708979441_create_refresh_token_table.py
backend/: .env.template  Dockerfile  README.md  compose.yml
backend/alembic/versions/: 1708979263_create_auth_user_table.py  1708979441_create_refresh_token_table.py
backend/src/: main.py
backend/src/account/: api_v1.py
backend/src/auth/: api_v1.py  db.py  deps.py  jwt.py  pwd_utils.py  schemas.py  service.py  utils.py
backend/src/core/: config.py  constants.py  exceptions.py
backend/src/db/: models.py  query.py  query_helper.py
backend/src/tutorial/: __init__.py  cookie_header_params.py  form_and_files.py  path_params.py  request_body.py
backend/tests/: conftest.py  test_main.py
backend/tests/auth/: test_api_v1.py
frontend/: package-lock.json  package.json
itermocil/: dev.yml
requirements/: base.txt
scripts/: makemigration
src/: config.py  database.py  exceptions.py  main.py
src/auth/: api_v1.py  config.py  db.py  deps.py  exceptions.py  jwt.py  models.py  schemas.py  service.py
src/core/: config.py  constants.py  database.py  schemas.py
src/database/: engine.py  tables.py
src/db/: engine.py
src/tutorial/: __init__.py  cookie_header_params.py  dependencies.py  error_handling.py  form_and_files.py  path_params.py  query_params.py  request_body.py  response_pydantic_models.py  response_status_codes.py  router.py  validations_and_metadata.py
src/user/: schemas.py
tests/: conftest.py  test_main.py
tests/auth/: test_api_v1.py
