[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Michael Hsu <michael100.hsu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
email-validator = "^2.1.0.post1"
alembic = "^1.13.1"
pydantic = "^2.6.1"
python-multipart = "^0.0.9"
pydantic-settings = "^2.2.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
sqlalchemy = {extras = ["asyncio", "mypy"], version = "^2.0.27"}
asyncpg = "^0.29.0"
bcrypt = "^4.1.2"
psycopg = {extras = ["binary"], version = "^3.1.18"}
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
flake8 = "^7.0.0"
mypy = "^1.8.0"
black = "^24.2.0"
isort = "^5.13.2"
types-python-jose = "^3.3.4.20240106"
ruff = "^0.3.0"
pytest-asyncio = "^0.23.5.post1"
debugpy = "^1.8.1"
pytest-env = "^1.1.3"

[build-system]
requires = ["poetry-core>=1.7.1"]
build-backend = "poetry.core.masonry.api"
